Add basic HTML skeleton to template.

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/sketchy/bootstrap.min.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div id="title">
-            <h1 class="primary">Leaderboard</h1>
+    <div id="appDiv" class="container-fluid mx-3 my-1 p-0">
+        <div id="title" class="topTitle d-flex align-items-center">
+            <span class="loMasGrande p-0 m-0">Leaderboard</span>
         </div>
-        <div id="content" class="row">
-            <div class="col-10 m-auto">
-                <div id="list" class="container-fluid"></div>
-                <div id="form" class="container-fluid"></div>
+        <div id="content" class="contenido">
+            <div class="row p-0 m-0">
+                <div id="list" class="col-6"></div>
+                <div id="form" class="col-6"></div>
             </div>
         </div>
     </div>
